force-app/main/default/objects/Checklist_Template_Item__c/Checklist_Template_Item__c.object-meta.xml
<CustomObject>
    <label>Checklist Template Item</label>
    <nameField>
        <displayFormat>CTI-{00}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Checklist Template Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>